translated more text

--- a/src/locales/ar/translation.json
+++ b/src/locales/ar/translation.json
@@ -9,10 +9,56 @@
     "download": "تحميل السيرة الذاتية"
   },
   "home": {
-    "greeting": "مرحباً!",
-    "im": "أنا"
+    "greeting": "!مرحباً",
+    "im": "أنا عهد ميماس"
   },
   "home2": {
-    "intro": "دعني <span class=\"purple\"> أُعرّف </span> بنفسي"
-  }
+      "intro": "دعني <span class=\"purple\"> أُعرّف </span> بنفسي",
+    "content": "أنا <b class=\"purple\">مهندس برمجيات</b> أعيش في مونتريال ولدي خبرة في بناء تطبيقات ويب متكاملة وأنظمة ذكاء اصطناعي وأدوات كشف فورية.<br /><br />أحمل شهادة بكالوريوس في هندسة البرمجيات من جامعة كونكورديا وقد أنشأت مشاريع حقيقية باستخدام <i><b class=\"purple\"> React و Next.js و C# و Node.js و Python</b></i>.<br /><br />تركيزي الرئيسي هو تطوير حلول قابلة للتوسّع وسهلة الاستخدام بدءًا من منصات البودكاست وتطبيقات الموسيقى باستخدام إشارات الدماغ إلى تتبع الحركة عبر الواي فاي وأنظمة التجارة الإلكترونية.<br /><br />أنا واثق من العمل على مختلف طبقات التطبيق، وبناء واجهات برمجة التطبيقات، ودمج التعلم الآلي، واستخدام أدوات مثل <i><b class=\"purple\"> PostgreSQL و Firebase و Stripe</b></i>.<br /><br />أنا حالياً منفتح على فرص جديدة يمكنني من خلالها الاستمرار في التعلم والمساهمة في منتجات حقيقية وحل مشاكل ذات معنى باستخدام البرمجيات.",
+    "find": "تواصل معي عبر",
+    "connect": "لا تتردد في <span class=\"purple\">التواصل</span> معي"
+  },
+  "about": {
+    "know": "اعرف من <strong class=\"purple\">أكون</strong>",
+    "skillsetHeading": "<strong class=\"purple\">المهارات</strong> الاحترافية",
+    "toolsHeading": "<strong class=\"purple\">الأدوات</strong> التي أستخدمها"
+  },
+  "aboutCard": {
+    "intro1": "مرحباً، أنا <span class=\"purple\">عهد ميماس</span> من <span class=\"purple\">مونتريال، كندا</span>.",
+    "intro2": "أنا مهندس برمجيات فضولي ومتحمس أستمتع بحل المشاكل الحقيقية عن طريق البرمجة. من تصميم منصات متكاملة إلى تجربة أدوات الذكاء الاصطناعي والأتمتة، أبني بوضوح وهدف.",
+    "intro3": "تخرجت بدرجة بكالوريوس في هندسة البرمجيات من <strong>جامعة كونكورديا</strong> وعملت على عدة مشاريع مؤثرة تشمل:",
+    "list1": "منصات بودكاست ذكية مع تفريغ صوتي بالذكاء الاصطناعي",
+    "list2": "توليد موسيقى من إشارات دماغية مُحاكية",
+    "list3": "اكتشاف تعابير الوجه والكمامة في الوقت الفعلي",
+    "list4": "أدوات توظيف وتجارة إلكترونية مخصصة",
+    "goal": "هدفي هو دائماً تقديم كود مدروس ومفيد وقابل للصيانة.",
+    "outside": "خارج نطاق البرمجة، أستعيد نشاطي عبر:",
+    "activity1": "لعب ألعاب الفيديو",
+    "activity2": "مشاهدة الأفلام والمسلسلات",
+    "activity3": "ممارسة الرياضة",
+    "activity4": "السفر"
+  },
+  "tech": {
+    "core": "\ud83e\uddd1\u200d\ud83e\udd16 لغات البرمجة الأساسية",
+    "frameworks": "\ud83e\udd16 الأطر والمكتبات",
+    "databases": "\ud83d\uddc3\ufe0f قواعد البيانات"
+  },
+  "tools": {
+    "dev": "\ud83d\udee0 أدوات ومنصات التطوير",
+    "db": "\ud83e\uddf1 قواعد البيانات والأنظمة"
+  },
+  "projectsSection": {
+    "heading": "أحدث <strong class=\"purple\">أعمالي</strong>",
+    "intro": "هذه بعض المشاريع التي عملت عليها مؤخراً."
+  },
+  "footer": {
+    "designed": "تم التصميم والتطوير بواسطة عهد ميماس"
+  },
+  "typewriter": [
+    "مهندس برمجيات",
+    "مطور ويب متكامل",
+    "ضمان الجودة",
+    "مهتم بالذكاء الاصطناعي",
+    "مصمم قواعد بيانات"
+  ]
 }
